--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     width: 100%;
     justify-content: center;
     align-items: center;
-    background-color: #c4acee;
+    background-color: #c4eeca;
     color: #ffffff;
 }
 
