Добавление стилей формы
- Настроены стили формы
- Настроены стили полей
- Настроены стили полей при наведении

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@ body {
     width: 100%;
     justify-content: center;
     align-items: center;
-    background-color: #c4eeca;
+    background-color: #c4caee;
     color: #ffffff;
 }
 
